--- a/node/create-tdo.html
+++ b/node/create-tdo.html
@@ -1,3 +1,50 @@
+<script type="text/x-red" data-template-name="create-tdo">
+    <div class="form-row">
+        <label for="node-input-uri"><i class="fa fa-link"></i> URI</label>
+        <input type="text" id="node-input-uri" style="width:70%">
+        <input type="hidden" id="node-input-uriType">
+    </div>
+    <div class="form-row">
+        <label for="node-input-startDateTime"><i class="fa fa-calendar"></i> Start Time</label>
+        <input type="string" id="node-input-startDateTime">
+    </div>
+    <div class="form-row">
+        <label for="node-input-stopDateTime"><i class="fa fa-calendar"></i> Stop Time</label>
+        <input type="string" id="node-input-stopDateTime">
+    </div>
+    <div class="form-row">
+        <label for="node-input-tdoName"> TDO Name</label>
+        <input type="string" id="node-input-tdoName">
+    </div>
+    <div class="form-row">
+        <label for="node-input-sourceId"> Source ID</label>
+        <input type="string" id="node-input-sourceId">
+    </div>
+    <div class="form-row">
+        <label for="node-input-contentType"> Content Type</label>
+        <input type="string" id="node-input-contentType">
+    </div>
+    
+    <div class="form-row">
+        <label for="node-input-updateStopDateTimeFromAsset">&nbsp;</label>
+        <input type="checkbox" id="node-input-updateStopDateTimeFromAsset" style="display:inline-block; width:15px; vertical-align:baseline;">
+        <span>Update Stop Time From Asset</span> &nbsp;
+        &nbsp;
+    </div>
+    
+    <div class="form-row">
+        <label for="node-input-isPublic">&nbsp;</label>
+        <input type="checkbox" id="node-input-isPublic" style="display:inline-block; width:15px; vertical-align:baseline;">
+        <span>Is Public</span> &nbsp;
+        &nbsp;
+    </div>
+
+    <div class="form-row">
+        <label for="node-input-name"><i class="icon-tag"></i> Node Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+</script>
+
 <script type="text/javascript">
     RED.nodes.registerType('create-tdo', {
         category: 'aiWARE',
@@ -5,9 +52,14 @@
         defaults: {
             name: { value: "" },
             tdoName: { value: "" },
+            sourceId: { value: "" },
+            contentType: { value: "" },
             uri: { value: "", required: true },
-            startDateTime: { value: new Date().toString(), required: true },
-            isPublic: { value: false }
+            uriType: { value: "str" },
+            startDateTime: { value: "" },
+            stopDateTime: { value: "" },
+            isPublic: { value: false },
+            updateStopDateTimeFromAsset: { value: true }
         },
         inputs: 1,
         outputs: 2,
@@ -16,32 +68,33 @@
         paletteLabel: "create-tdo",
         align: "right",
         label: function () {
-            return "create-tdo " + this.name;
+            return this.name || this.tdoName || "create-tdo";
+        },
+        oneditprepare: function () {
+            var $uriType = $("#node-input-uriType");
+            $("#node-input-uri").val(this.uri);
+            $("#node-input-uri").typedInput({
+                default: 'str',
+                typeField: $uriType,
+                types: ['str', 'msg']
+            });
+        },
+        oneditsave: function () {
+            $("#node-input-uri").val($("#node-input-uriType").typedInput('value'));
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="create-tdo">
-    <div class="form-row">
-        <label for="node-input-name"><i class="icon-tag"></i> Node Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
-    <div class="form-row">
-        <label for="node-input-startDateTime"><i class="fa fa-date"></i> Start Time</label>
-        <input type="string" id="node-input-startDateTime">
-    </div>
-    <div class="form-row">
-        <label for="node-input-uri"><i class="fa fa-globe"></i> URI</label>
-        <input type="text" id="node-input-uri" placeholder="http://">
-    </div>
-    <div class="form-row">
-        <label for="node-input-isPublic">&nbsp;</label>
-        <input type="checkbox" id="node-input-isPublic" style="display:inline-block; width:15px; vertical-align:baseline;">
-        <span>Is Public</span> &nbsp;
-        &nbsp;
-    </div>
-</script>
-
 <script type="text/x-red" data-help-name="create-tdo">
-    <p>Create a TDO</p>
+    <p>
+        The create-tdo node creates a TemporalDataObject container object 
+        in aiWARE and a child Asset records that stores the original media file.
+        <br>
+        The node is usually used with the processing node for first 
+        creating Files in aiWARE's data model, and then running cognitive on those Files.
+        <br>
+        <br>
+        Each TemporalDataObject expects a start time. If left blank, the Start Time will be populated 
+        with the dateTime value the TDO was created in aiWARE.
+    </p>
 </script>
