icons for array and object

--- a/node/structured-data.html
+++ b/node/structured-data.html
@@ -42,12 +42,17 @@
             "dateTime": "datetime"
         };
         var icons = {
-            // for type
-            "string": "fa-quote-right",
-            "boolean": "fa-check-square",
-            "datetime": "fa-clock",
+            // type
             "number": "fa-hashtag",
-            // for field
+            "integer": "fa-superscript",
+            "boolean": "fa-check-square",
+            "string": "fa-quote-right",
+            "array": "fa-list-ol",
+            "object": "fa-object-group",
+            // string format
+            "datetime": "fa-clock",
+            "geopoint": "fa-map-pin",
+            // specific field
             "rate": "fa-hashtag",
             "spotId": "fa-hashtag",
             "orderItemsList": "fa-list",
