--- a/node/v2fout.html
+++ b/node/v2fout.html
@@ -1,28 +1,30 @@
 <script type="text/javascript">
-    RED.nodes.registerType('V2F Out',{
-      category: 'aiWARE',
-      color:"#b3e5fc",
-      defaults: {
-        name: {value:""},
+  RED.nodes.registerType('V2F Out', {
+    category: 'aiWARE',
+    color: "#b3e5fc",
+    defaults: {
+      name: {
+        value: ""
       },
-      inputs:1,
-      outputs:0,
-      icon: "veritone-logo-transparent.png",
-      align: "right",
-      paletteLabel: "V2F Out",
-      label: function() {
-        return this.name || "V2F Out";
-      }
-    });
-  </script>
-  
-  <script type="text/x-red" data-template-name="V2F Out">
-      <div class="form-row">
+    },
+    inputs: 1,
+    outputs: 0,
+    icon: "veritone-logo-transparent.png",
+    align: "right",
+    paletteLabel: "V2F Out",
+    label: function () {
+      return this.name || "V2F Out";
+    }
+  });
+</script>
+
+<script type="text/x-red" data-template-name="V2F Out">
+  <div class="form-row">
           <label for="node-input-name"><i class="icon-tag"></i> Name</label>
           <input type="text" id="node-input-name" placeholder="Name">
       </div>
   </script>
-  
-  <script type="text/x-red" data-help-name="V2F Out">
-      <p> V2F output node </p>
+
+<script type="text/x-red" data-help-name="V2F Out">
+  <p> V2F output node </p>
   </script>
